--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "node server",
     "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-  "engines": {
-    "node": "14.17.1",
-    "npm": "6.14.13"
-  },
+
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.0",
