--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server",
+    "start": "node server.js",
     "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-
+  "engines": {
+    "node": "14.17.1",
+    "npm": "6.14.13"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.0",
@@ -21,6 +24,8 @@
     "@angular/router": "~12.1.0",
     "@popperjs/core": "^2.9.3",
     "bootstrap": "^5.0.0-beta3",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
